<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="label">Luanti</string>
	<string name="loading">Loading&#8230;</string>
	<string name="notification_channel_name">General notification</string>
	<string name="notification_channel_description">Notifications from Luanti</string>
	<string name="unzip_notification_title">Loading Luanti</string>
	<string name="unzip_notification_description">Less than 1 minute&#8230;</string>
	<string name="game_notification_title">Luanti is running</string>
	<string name="ime_dialog_done">Done</string>
	<string name="no_web_browser">No web browser found</string>
	<string name="settings">Settings</string>
	<string name="native_mods">Native Mods</string>
	<string name="import_mod">Import .so</string>
	<string name="restart_to_apply">Restart to apply changes</string>
	<string name="restart">Restart</string>
	<string name="delete">Delete</string>
	<string name="no_mods_installed">No native mods installed</string>
</resources>
